updating html_test.html and vue.config.js in order to rename the builded Scipts as "main.js" and keep the path in the html_test for the integration test

--- a/index_test.html
+++ b/index_test.html
@@ -10,7 +10,7 @@
 <body>
 
     <span id="app"></span>
-    <script src="./dist/js/app.c4d6b36f.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 
 </html>
