--- a/index_test.html
+++ b/index_test.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/gh/deusPride/chatbot/dist/main.js" defer></script>
+
     <title>Document</title>
 </head>
 
 <body>
 
-    <span id="app"></span>
-    <script src="./dist/main.js"></script>
+
 </body>
 
 </html>
